--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 # Removed version as it's obsolete in newer Docker Compose
 
 services:
+  # Nginx Reverse Proxy
+  nginx:
+    build: ./nginx
+    container_name: parentic_nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - frontend
+      - backend
+
+    networks:
+      - parentic_network
+    restart: unless-stopped
+
   # PostgreSQL Database
   postgres:
     image: postgres:15
@@ -12,8 +26,6 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5433:5432"
     networks:
       - parentic_network
 
@@ -21,8 +33,6 @@ services:
   chroma:
     image: chromadb/chroma:latest
     container_name: parentic_chroma
-    ports:
-      - "8000:8000"
     volumes:
       - chroma_data:/chroma/chroma
     environment:
@@ -31,36 +41,12 @@ services:
     networks:
       - parentic_network
 
-  # Keycloak Authentication
-  keycloak:
-    image: quay.io/keycloak/keycloak:22.0
-    container_name: parentic_keycloak
-    environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin123
-      KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/parentic_ai
-      KC_DB_USERNAME: parentic_user
-      KC_DB_PASSWORD: parentic_password
-      KC_HOSTNAME: localhost
-      KC_HOSTNAME_PORT: 8080
-      KC_HOSTNAME_STRICT: false
-      KC_HTTP_ENABLED: true
-      
-    ports:
-      - "8080:8080"
-    depends_on:
-      - postgres
-    command: start-dev
-    networks:
-      - parentic_network
+
 
   # Ollama for Local LLM
   ollama:
     image: ollama/ollama:latest
     container_name: parentic_ollama
-    ports:
-      - "11434:11434"
     volumes:
       - ollama_data:/root/.ollama
     networks:
@@ -92,42 +78,38 @@ services:
   backend:
     build: ./backend
     container_name: parentic_backend
-    ports:
-      - "8001:8000"
     environment:
       - DATABASE_URL=postgresql://parentic_user:parentic_password@postgres:5432/parentic_ai
       - CHROMA_URL=http://chroma:8000
       - OLLAMA_URL=http://ollama:11434
-      - KEYCLOAK_URL=http://keycloak:8080
       - JWT_SECRET=your-super-secret-jwt-key-change-in-production
     depends_on:
       - postgres
       - chroma
-      - keycloak
       - ollama
     volumes:
       - ./backend:/app
     networks:
       - parentic_network
 
-  # Frontend React App
+  # Frontend React App (Static Build)
   frontend:
     build: ./frontend
     container_name: parentic_frontend
-    ports:
-      - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:8001
-      - REACT_APP_KEYCLOAK_URL=http://localhost:8080
-      - REACT_APP_KEYCLOAK_REALM=parentic-ai
-      - REACT_APP_KEYCLOAK_CLIENT_ID=parentic-client
+      - REACT_APP_API_URL=https://parenticai.com/api
+      - REACT_APP_FIREBASE_API_KEY=AIzaSyBY8EvZa4Ttwh93RxLftRzGjPeLlGkUTVA
+      - REACT_APP_FIREBASE_AUTH_DOMAIN=parenticai-auth.firebaseapp.com
+      - REACT_APP_FIREBASE_PROJECT_ID=parenticai-auth
+      - REACT_APP_FIREBASE_STORAGE_BUCKET=parenticai-auth.firebasestorage.app
+      - REACT_APP_FIREBASE_MESSAGING_SENDER_ID=335828509209
+      - REACT_APP_FIREBASE_APP_ID=1:335828509209:web:7bd7ceb1cb0afe92780088
+      - REACT_APP_FIREBASE_MEASUREMENT_ID=G-HJMPS85E4M
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     networks:
       - parentic_network
+    restart: unless-stopped
 
 volumes:
   postgres_data:
