Add database setup and features implementation documentation; introduce new API endpoints for user, parent, child, and personality assessment management. Update frontend to utilize Firebase for authentication and improve data handling with environment variables.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "recharts": "^2.8.0",
     "@fontsource/poppins": "^5.0.8",
     "@fontsource/inter": "^5.0.15",
-    "@vercel/node": "^3.0.0"
+    "@vercel/node": "^3.0.0",
+    "pg": "^8.11.3"
   },
   "scripts": {
     "start": "DANGEROUSLY_DISABLE_HOST_CHECK=true react-scripts start",
