--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,6 +6,10 @@
   "framework": "create-react-app",
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
