Update Vercel configuration to specify Node.js runtime for API functions; enhance user authentication handling in users.js to allow querying by firebase_uid for GET requests while enforcing authorization for other methods.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,13 +4,14 @@
   "devCommand": "npm start",
   "installCommand": "npm install",
   "framework": "create-react-app",
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
+      "source": "/((?!api/).*)",
       "destination": "/index.html"
     }
   ],
